@@ -39,6 +39,7 @@ Changelog for 1.5.8
 * Fix Recurring Transactions screen fails on second access (Erik H, #2888)
 * Fix 'On Hand' goods search filter not being applied (Erik H, #2845)
 * Clean up issues found by Debian's 'lintian' (Erik H, Robert C)
+* Fix layout regression of 1.5 in single payment screen (Erik H, #1917)
 
 Erik H is Erik Huelsmann
 Robert C is Robert James Clay
